<resources>
    <string name="app_name">Almizan</string>
    <string name="login">Login</string>
    <string name="createnewaccont">Create New Account</string>
    <string name="createaccont">Create an account</string>
    <!--buttom menu-->
    <string name="home">Home</string>
    <string name="directory">Directory</string>
    <string name="library">Library</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>

    <!--createaccont-->
    <string name="fullname">full name</string>
    <string name="Emailaddress">Email Address</string>
    <string name="password">password</string>
    <string name="telephonenumber">Telephone number</string>
    <string name="state">The state</string>
    <string name="createyouraccount">Create your account</string>
    <string name="arabic">Download an image from the membership of the Bar Association</string>

    <!--login-->
    <string name="welcome">welcome,</string>
    <string name="signin">Sign in</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="newusercreat">New user? Create your account</string>

    <!--Mainscreen-->
    <string name="balance_title">Balance</string>
    <!--siedmenu_without_sign-->
    <string name="whatbalance">What is the balance</string>
    <string name="registration">Registration of lawyers</string>
    <string name="callus">Contact Us</string>

    <!--siedmenu_with_sign-->
    <string name="name">Najwan Mohammed</string>
    <string name="appealattorney">Appeal Attorney</string>
    <string name="myarticles">My Articles</string>
    <string name="alerts">Alerts</string>
    <string name="signoutaccount">Sign out of account</string>
    <string name="about_us">About us</string>
    <string name="my_account">My account</string>
    <string name="my_articles">My articles</string>
    <string name="notification">Notifications</string>
    <string name="logout">Log out</string>
    <string name="SKIP">SKIP</string>

    <string-array name="theme_array">

        <item>select</item>
        <item>Black</item>
        <item>White</item>

    </string-array>
    <string name="title_activity_navigation_activity">Navigation_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="date">10 july,2019</string>
    <string name="news_title">News Title</string>
    <string name="news_detail">The organization of thousands of publishers from the organization of thousands of publishersOf the organization of thousands of publishers and magazines organized by thousands of publishersOf the organization of </string>

    <string name="single_news_page">News Page</string>
    <string name="add_comment">Add Comment</string>
    <string name="send">Send</string>


    <string name="search">Search</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="send_message">Send Message</string>
    <string name="more">More</string>
    <string name="user_name">User Name</string>
    <string name="offline">Offline</string>
    <string name="bullet">\u2022</string>
    <string name="Create_an_account">Create an account</string>

    <!--Creataccount_sign-->
    <string name="sign_name">Name</string>
    <string name="log_in">log in</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sign_in_google">Sign in with Google Account</string>
    <string name="sign_in_email">Sign in by email</string>

    <string name="international_law">International Law</string>

    <string name="phone_no">+123-1234-123-123</string>
    <string name="address">Address :</string>
    <string name="address_static">EmpireBusiness hub,Surat</string>
    <string name="phonee">Phone :</string>
    <string name="emaill">Email :</string>
    <string name="email_static">abc@gmail.com</string>
    <string name="site">Site :</string>
    <string name="site_static">google.com</string>
    <string name="media">Media</string>
    <string name="photos"><![CDATA[Videos &Photos]]></string>
    <string name="posted_by">Posted By :</string>
    <string name="premimum_lawyer">Premimum Lawyer</string>

    <!-- Directory of lawyers -->
    <string name="free_name">Name:</string>
    <string name="shortdicription">Dicrtdiption:</string>
    <string name="phone_direct">Phone :</string>
    <string name="Address">Address :</string>
    <string name="email_direct">Email :</string>
    <string name="sitee">Site:</string>
    <string name="data_not_found">Data Not Found</string>


    <string name="country">Country </string>
    <string name="gmail">ALMIZAN.KWT@GMAIL.COM</string>
    <string name="twiter">\@ALMIZANKWT</string>
    <string name="instagram">ALMIZAN.KWT</string>
    <string name="telephone">9912345678</string>
    <string name="detail">Al Mizan is a social service aimed at spreading the legal culture among the members of society, in addition to facilitating the communication between individuals and lawyers.</string>
    <string name="second_detail">Al Mezan is also interested in publishing the news and opinions of legal lawyers, which contribute to creating an atmosphere of knowledge and legal culture.</string>
    <string name="detail_last">The aim of the balance sheet is to elevate everyone who has placed himself in the position of defending the law and society as a whole.</string>
    <string name="contact_data">Contact Data</string>
    <string name="about_usss">About the balance</string>
    <string name="online">Online</string>

    <!--Add article-->
    <string name="add_article">Add Article</string>

    <string name="add_Page_article">إضافة مقال او نصيحة قانونية</string>
    <string name="title">Title</string>
    <string name="article_detail">Details</string>
    <string name="upload_image">Upload image</string>
    <string name="youtube_link">Youtube link</string>
    <string name="upload_article">Upload Article</string>
    <string name="registration_lawyer">Registration As a Lawyer</string>
    <string name="edit_article">Edit Article</string>
    <string name="link">www.google.com</string>

    <string name="user_name_nm">Najwan Mohammed Mohammed Salem</string>
    <string name="user_name_app">Appeal Attorney and State Council</string>
    <string name="user_personal_Data">Personal Data</string>
    <string name="Social_networking_accounts">Social networking accounts</string>
    <string name="About_the_lawyer">About the Lawyer</string>
    <string name="user_detail">who has been allowed to practice law according to applicable law, and the lawyer may be authorized to ... plead before civil courts; A lawyer is a title given to a person who has been allowed to practice law according to applicable law, and the lawyer may be authorized to ... plead before civil courts</string>
    <string name="Edit_your_avatar">Edit your avatar</string>
    <string name="tv_title">Title</string>
    <string name="titleee">رقم واسم الشارع, المدينة, الدولة</string>
    <string name="save">Save</string>
    <string name="enteruserdtis">Enter User Detils</string>
    <string name="Edit_your_profile">Edit Your Profile</string>
    <string name="fb_link">Facebook Link</string>
    <string name="insta_link">Instagram Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="phone_noo">Enter Phone No</string>
    <string name="address_s">Enter Address</string>
    <string name="emailll">Enter Email</string>
    <string name="siteee">Enter site</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Upload_photos_media">Upload Photos and Media</string>
    <string name="choose_image">Choose Image</string>
    <string name="multiple_file">Upload Multiple Files</string>
    <string name="internal_storage">Internal storage</string>
    <string name="Add_youtube_link">Add Youtube Link</string>
    <string name="delete_article">Delete article</string>
    <string name="Description">Description</string>
    <string name="my_images">My Images</string>
    <string name="my_videos">MY Videos</string>
    <string name="Select">Select</string>

    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="Remove_photo">Remove Photo</string>
    <string name="Cancel">Cancel</string>
    <string name="directory_of_lawyer"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_password">Change Password</string>
    <string name="Comments">Comments</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_conf_pw">Enter Confirm Password</string>
    <string name="enter_new_pw">Enter New Password</string>
    <string name="enter_old_pw">Enter Old Password</string>

</resources>
