<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:checked="true"
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_nav_directory"
        android:icon="@drawable/directory"
        android:title="@string/directory" />

    <item
        android:id="@+id/bottom_nav_library"
        android:icon="@drawable/library"
        android:title="@string/library" />

    <item
        android:id="@+id/bottom_nav_article"
        android:icon="@drawable/articles"
        android:title="@string/articles" />

    <item
        android:id="@+id/bottom_nav_myaccount"
        android:icon="@drawable/myaccountt"
        android:title="@string/my_account" />
    <!--<item
        android:id="@+id/bottom_nav_account1"
        android:icon="@drawable/currency"
        android:title="Account" />-->

</menu>
    <!--myaccount-->