<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lv_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_date_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/date_color"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_title_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:text="@string/news_detail"
        android:textColor="@color/bottom_icon"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>