<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2.3"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="2dp"
            android:textStyle="bold"
            android:text="@string/user_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/edittextline"
            android:textSize="14sp"
            android:padding="2dp"
            android:textStyle="bold"
            android:text="@string/offline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/edittextline"
            android:textSize="14sp"
            android:padding="2dp"
            android:maxLines="3"
            android:textStyle="bold"
            android:text="@string/news_detail"/>

    </LinearLayout>
</LinearLayout>