<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:focusable="true"
    android:orientation="vertical"
    android:id="@+id/lv_login_parent"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:src="@drawable/app_icon"
                        android:tint="@color/black"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/google_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_garry"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="3dp"
                        android:layout_weight="1.7">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_google"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:layout_weight="0.3">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sign_in_google"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/google_login"
                    android:textColorHint="@color/edittextline">
                    <EditText
                        android:id="@+id/et_Email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/edittextline"
                        android:textColor="@color/black"  />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_password"
                    app:passwordToggleContentDescription="@string/login"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleTint="@color/edittextline"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPasswordLayout">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotpassword"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_create_account_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/forgot"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/signin"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:layout_below="@+id/btn_create_account_login"
                    android:text="@string/newusercreat"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>