<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lv_library"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center|start"
        android:layout_height="wrap_content"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_library_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/edittextline"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_library_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:visibility="gone"
            android:gravity="center|start"
            android:textColor="@color/edittextline"
            android:textSize="14sp"
            android:text="@string/news_detail" />

        <TextView
            android:gravity="center|start"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"

            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_library_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/edittextline"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_weight="1"
                android:textStyle="normal" />

            <TextView
                android:layout_toRightOf="@+id/tv_library_desc"
                android:singleLine="true"
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center|start"
            android:gravity="start|center"
            android:visibility="gone"
            android:orientation="horizontal">


            <TextView
                android:visibility="gone"
                android:id="@+id/tv_library_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="2"
                android:gravity="center|start"
                android:text="@string/link"
                android:layout_marginRight="5dp"
                android:textColor="@color/edittextline"
                android:textSize="14sp"
                android:textStyle="bold" />



        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/edittextline"/>

</LinearLayout>